base/deployment-rollout.yaml

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: argo-rollouts-app
  namespace: dev
spec:
  replicas: 3
  revisionHistoryLimit: 3
  strategy:
    canary:
      canaryService: argo-rollouts-svc-canary
      stableService: argo-rollouts-svc-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: argo-rollouts-http-route # our created httproute
            namespace: dev # Optional: defaults to rollout namespace
            # Optional: customize or disable the temporary label that marks routes as managed during a canary
            # inProgressLabelKey: rollouts.argoproj.io/gatewayapi-canary
            # inProgressLabelValue: in-progress
            # disableInProgressLabel: false
      steps:
        - setWeight: 10
        - pause: {duration: 20}
        - analysis:
            templates:
              - templateName: argo-rollouts-analysis-template
        - setWeight: 25
        - pause: {duration: 20}
        - setWeight: 50
        - pause: {duration: 20}
        - setWeight: 75
        - pause: {duration: 30}
        - setWeight: 100
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo
    spec:
      containers:
        - name: argo-rollouts-app
          image: 345259854056.dkr.ecr.us-east-1.amazonaws.com/kargo-app:v1.0.0
          ports:
            - containerPort: 3000
          # env:
          #   - name: APP_VERSION
          #     value: "v1"
          #   - name: APP_COLOR
          #     value: "#2563eb"
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
