base/argo-rollouts-svc-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-svc-canary
  labels:
    app: app-demo    
spec:
  selector:
    app: app-demo
  ports:
    - port: 80
      targetPort: 3000
