base/kargo-app-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-svc-stable
  namespace: gateway-app
  labels:
    app: app-demo
    
spec:
  selector:
    app: app-demo
    
  ports:
    - port: 80
      targetPort: 3000
