base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-http-route
  namespace: dev
spec:
  parentRefs:
    - name: gateway-api-listeners
      namespace: kube-system 
      sectionName: https

  hostnames:
    - "app.api-test.registfylabs.online"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: argo-rollouts-svc-stable
          kind: Service
          port: 80
          weight: 100

        - name: argo-rollouts-svc-canary
          kind: Service
          port: 80
          weight: 0
